ecmascript/parser/tests/test262-error-references/fail/aa232c1eb3da8805.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/aa232c1eb3da8805.js:1:30
  |
1 | function*g() { try {} catch (yield) {} }
  |                              ^^^^^

